istio/ingress-gateway/bar.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: bar
        image: paulbouwer/hello-kubernetes:1.8
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bar
  labels:
    app: bar
    service: bar
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: bar
