istio/ingress-gateway/foo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: foo
        image: paulbouwer/hello-kubernetes:1.8
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  labels:
    app: foo
    service: foo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: foo
