istio/ingress-gateway/sub-domain.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sub
  template:
    metadata:
      labels:
        app: sub
    spec:
      containers:
      - name: sub
        image: paulbouwer/hello-kubernetes:1.8
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sub
  labels:
    app: sub
    service: sub
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: sub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sub2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sub2
  template:
    metadata:
      labels:
        app: sub2
    spec:
      containers:
      - name: sub2
        image: paulbouwer/hello-kubernetes:1.8
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sub2
  labels:
    app: sub2
    service: sub2
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: sub2
